Fix for CFEngine link being covered by div

--- a/_assets/css/navigation.css
+++ b/_assets/css/navigation.css
@@ -7,11 +7,6 @@
     margin-top:12px;
 }
 
-#nav_wrapper {
-    height:50px;
-    position:relative;
-}
-
 #nav_wrapper ul {
     margin: 0;
     padding: 0;
